--- a/Makefile.arm9
+++ b/Makefile.arm9
@@ -13,7 +13,7 @@ ARM_NONE_EABI_PATH	?= $(WONDERFUL_TOOLCHAIN)/toolchain/gcc-arm-none-eabi/bin/
 
 SOURCEDIRS	:= arm9/source
 INCLUDEDIRS	:= common/include
-GFXDIRS		:=
+GFXDIRS		:= gfx
 BINDIRS		:= arm9/data/gfx arm9/data/msc
 AUDIODIRS	:=
 
@@ -67,7 +67,7 @@ ifneq ($(BINDIRS),)
     INCLUDEDIRS	+= $(addprefix $(BUILDDIR)/,$(BINDIRS))
 endif
 ifneq ($(GFXDIRS),)
-    SOURCES_PNG	:= $(shell find -L $(GFXDIRS) -name "*.png")
+    SOURCES_BMP	:= $(shell find -L $(GFXDIRS) -name "*.bmp")
     INCLUDEDIRS	+= $(addprefix $(BUILDDIR)/,$(GFXDIRS))
 endif
 ifneq ($(AUDIODIRS),)
@@ -122,11 +122,11 @@ LDFLAGS		:= $(ARCH) $(LIBDIRSFLAGS) -Wl,-Map,$(MAP) $(DEFINES) \
 
 OBJS_ASSETS	:= $(addsuffix .o,$(addprefix $(BUILDDIR)/,$(SOURCES_BIN))) \
 		   $(addsuffix .o,$(addprefix $(BUILDDIR)/,$(SOURCES_MOD))) \
-		   $(addsuffix .o,$(addprefix $(BUILDDIR)/,$(SOURCES_PNG)))
+		   $(addsuffix .o,$(addprefix $(BUILDDIR)/,$(SOURCES_BMP)))
 
 HEADERS_ASSETS	:= $(patsubst %.bin,%_bin.h,$(addprefix $(BUILDDIR)/,$(SOURCES_BIN))) \
 		   $(patsubst %.mod,%_mod.h,$(addprefix $(BUILDDIR)/,$(SOURCES_MOD))) \
-		   $(patsubst %.png,%.h,$(addprefix $(BUILDDIR)/,$(SOURCES_PNG)))
+		   $(patsubst %.bmp,%.h,$(addprefix $(BUILDDIR)/,$(SOURCES_BMP)))
 
 ifneq ($(SOURCES_AUDIO),)
     OBJS_ASSETS		+= $(SOUNDBANKDIR)/soundbank.c.o
@@ -202,12 +202,12 @@ $(BUILDDIR)/%.mod.o $(BUILDDIR)/%_mod.h : %.mod
 	$(V)$(BLOCKSDS)/tools/bin2c/bin2c $< $(@D)
 	$(V)$(CC) $(CFLAGS) -MMD -MP -c -o $(BUILDDIR)/$*.mod.o $(BUILDDIR)/$*_mod.c
 
-$(BUILDDIR)/%.png.o $(BUILDDIR)/%.h : %.png %.grit
+$(BUILDDIR)/%.bmp.o $(BUILDDIR)/%.h : %.bmp %.grit
 	@echo "  GRIT.9  $<"
 	@$(MKDIR) -p $(@D)
 	$(V)$(BLOCKSDS)/tools/grit/grit $< -ftc -W1 -o$(BUILDDIR)/$*
-	$(V)$(CC) $(CFLAGS) -MMD -MP -c -o $(BUILDDIR)/$*.png.o $(BUILDDIR)/$*.c
-	$(V)touch $(BUILDDIR)/$*.png.o $(BUILDDIR)/$*.h
+	$(V)$(CC) $(CFLAGS) -MMD -MP -c -o $(BUILDDIR)/$*.bmp.o $(BUILDDIR)/$*.c
+	$(V)touch $(BUILDDIR)/$*.bmp.o $(BUILDDIR)/$*.h
 
 $(SOUNDBANKDIR)/soundbank.h: $(SOURCES_AUDIO)
 	@echo "  MMUTIL  $^"
