--- a/Makefile.arm9
+++ b/Makefile.arm9
@@ -14,7 +14,7 @@ ARM_NONE_EABI_PATH	?= $(WONDERFUL_TOOLCHAIN)/toolchain/gcc-arm-none-eabi/bin/
 SOURCEDIRS	:= arm9/source build/graphics
 INCLUDEDIRS	:= common/include build/graphics
 GFXDIRS		:= graphics
-BINDIRS		:= arm9/data music
+BINDIRS		:= music
 AUDIODIRS	:=
 
 # Defines passed to all files
